set racktom to false

--- a/equipmentConfig.tex
+++ b/equipmentConfig.tex
@@ -74,7 +74,7 @@
 \newcommand{\drumsKickAmount}{1}
 
 \newboolean{drumsRackTom}
-\setboolean{drumsRackTom}{true}
+\setboolean{drumsRackTom}{false}
 \newcommand{\drumsRackTomAmount}{1}
 
 \newboolean{drumsFloorTom}
